--- a/src/panels/Profile/profile.module.css
+++ b/src/panels/Profile/profile.module.css
@@ -1,14 +1,20 @@
+.profile_container {
+    height: 100%;
+    display: grid;
+}
+
 .profile_card {
     display: grid;
+    align-items: center;
     background-color: #588EFF;
     border-radius: 25px;
     grid-template-columns: 10px 1fr;
-    grid-template-rows: min-content min-content min-content;
+    grid-template-rows: minmax(180px, 180px) minmax(200px, 300px) minmax(100px,120px);
     grid-template-areas: "slider about" "slider level_fragment" "slider logo";
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
     font-family: "Titillium Web", sans-serif;
     color: white;
-    margin: 40px 20px 40px 20px;
+    margin: auto 20px auto 20px;
 }
 
 .slider {
@@ -25,7 +31,7 @@
     margin: 30px auto auto;
     grid-template-columns: 100px 1fr;
     grid-template-areas: "user_photo bio";
-    grid-gap: 25px;
+    grid-gap: 20px;
 }
 
 .about img {
@@ -74,7 +80,11 @@
 }
 
 .background {
-    background: #E5E5E5;
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    /*background: rgba(229, 229, 229, 0.72);*/
 }
 
 .background div:nth-child(1) {
