--- a/src/panels/preview/fragments/modal.module.css
+++ b/src/panels/preview/fragments/modal.module.css
@@ -1,6 +1,7 @@
 .modal_window {
     position: absolute;
     margin-top: 70px;
+    width: 100%;
     display: grid;
     justify-items: center;
     grid-template-rows: 20px 1fr;
@@ -35,6 +36,7 @@
     color: black;
     margin-top: 10px;
     padding-left: 25px;
+    padding-right: 25px;
 }
 
 .title {
@@ -61,18 +63,33 @@
     font-size: 18px;
 }
 
+.question_item {
+    margin-top: 20px;
+    margin-left: -40px;
+    list-style-type:none;
+}
+
 .button {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    z-index: 30;
+    display: grid;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(163, 163, 163, 0.81) 100%);
+
+}
+
+.button button {
+    margin-left: auto;
+    margin-right: auto;
     width: 220px;
     height: 50px;
     background: #588EFF;
     border-radius: 15px;
+    border-style: none;
     text-align: center;
-}
-
-.button button {
-    width: 100%;
-    height: 100%;
     font-family: "Titillium Web", sans-serif;
     font-size: 18px;
     color: white;
+    outline: none;
 }
