--- a/src/panels/News/task.module.css
+++ b/src/panels/News/task.module.css
@@ -10,7 +10,7 @@
     display: grid;
     grid-template-rows: 4fr 1fr 1fr 1fr;
     grid-template-areas: "pic" "name" "info" "start_button";
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
     transition: 0.3s;
     background-color: #FFFFFF;
     border-radius: 25px;
@@ -18,7 +18,7 @@
 }
 
 .pic {
-    background-image:url(../../img/news/image36.svg);
+    background-image:url(../../img/news/background_image.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     border-top-left-radius: 25px;
@@ -69,6 +69,14 @@
     justify-content: space-around;
 }
 
+.dot {
+    height: 10px;
+    width: 10px;
+    background-color: #C4C4C4;
+    border-radius: 50%;
+    display: inline-block;
+  }
+
 .dot_on {
   height: 10px;
   width: 10px;
@@ -77,13 +85,7 @@
   display: inline-block;
 }
 
-.dot_off {
-  height: 10px;
-  width: 10px;
-  background-color: #C4C4C4;
-  border-radius: 50%;
-  display: inline-block;
-}
+
 
 .start_button {
     
