--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,9 +1,13 @@
 
-
 .profile_swipe {
     position: fixed;
     height: 300px;
     z-index: 1;
     top: 5vh;
-    right: -360px;
+    right: -375px;
 }
+
+.showed {
+    right: 0px;
+}
+
