--- a/src/panels/News/news.module.css
+++ b/src/panels/News/news.module.css
@@ -7,7 +7,7 @@
     padding: 20px;
     font-family: "Titillium Web", sans-serif;
     align-items: center;
-    margin: auto 20px auto auto;
+    margin: auto auto auto 20px;
 }
 
 
