--- a/src/panels/profile/Profile.module.css
+++ b/src/panels/profile/Profile.module.css
@@ -19,7 +19,7 @@
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
     font-family: "Titillium Web", sans-serif;
     color: white;
-    margin: auto 20px auto 20px;
+    /*margin: auto 20px auto 20px;*/
 }
 
 .slider {
