--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,17 +1,31 @@
 
-.profile_swipe {
-    position: fixed;
-    height: 300px;
-    z-index: 1;
-    top: 5vh;
-    right: -375px;
+.main_window {
+    scroll-snap-type: x mandatory;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    display: grid;
+    grid-template-columns: 95vw 1fr;
+    grid-template-areas: "news profile";
+}
+/*no scrollbar*/
+.main_window::-webkit-scrollbar {
+    display: none;  /* Safari and Chrome */
 }
 
-.showed {
-    transform: translate(-300px, 0px);
+.profile {
+    scroll-snap-align: start;
+    grid-area: profile;
+    margin: auto;
 }
 
-.hidden {
-    transform: translate(0px, 0px);
+.news_wrapper {
+    scroll-snap-align: start;
+    margin-left: 5px;
+    margin-right: 5px;
+    height: 100vh;
+    overflow: hidden;
+    grid-area: news;
 }
+
+
 
