--- a/src/panels/profile/Profile.module.css
+++ b/src/panels/profile/Profile.module.css
@@ -1,20 +1,18 @@
 .profile_container {
     scroll-snap-stop: always;
-    height: 100%;
     display: grid;
-    grid-template-columns: 400px;
+    grid-template-columns: minmax(350px, 400px);
     grid-template-areas: 'card';
-
 }
 
 .profile_card {
     grid-area: card;
     display: grid;
-    align-items: center;
+
     background-color: #588EFF;
     border-radius: 25px;
     grid-template-columns: 10px 1fr;
-    grid-template-rows: minmax(180px, 180px) minmax(200px, 300px) minmax(100px,120px);
+    grid-template-rows: minmax(100px, 150px) minmax(200px, 300px) minmax(100px,150px);
     grid-template-areas: "slider about" "slider level_fragment" "slider logo";
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
     font-family: "Titillium Web", sans-serif;
@@ -32,11 +30,13 @@
 }
 
 .about {
+    margin-left: auto;
+    margin-right: auto;
     display: grid;
-    margin: 30px auto auto;
     grid-template-columns: 100px 1fr;
     grid-template-areas: "user_photo bio";
     grid-gap: 20px;
+    align-items: center;
 }
 
 .about img {
