--- a/src/panels/profile/Profile.module.css
+++ b/src/panels/profile/Profile.module.css
@@ -1,17 +1,10 @@
-.profile_container {
-    scroll-snap-stop: always;
-    display: grid;
-    grid-template-columns: minmax(350px, 400px);
-    grid-template-areas: 'card';
-}
-
 .profile_card {
-    grid-area: card;
+    margin-right: 5vw;
     display: grid;
     background-color: #588EFF;
     border-radius: 25px;
     grid-template-columns: 20px 1fr;
-    grid-template-rows: minmax(100px, 150px) minmax(200px, 300px) minmax(100px,150px);
+    grid-template-rows: minmax(100px, 150px) minmax(320px, 340px) min-content;
     grid-template-areas: "slider about" "slider level_fragment" "slider logo";
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
     font-family: "Titillium Web", sans-serif;
@@ -71,7 +64,7 @@
     grid-area: logo;
     display: grid;
     grid-template-columns: 1fr 2fr;
-    margin: auto auto 20px;
+    margin: auto 5px 20px;
 }
 
 .logo img {
