preview style fixed

--- a/src/panels/preview/Preview.module.css
+++ b/src/panels/preview/Preview.module.css
@@ -8,9 +8,9 @@
 
 .background {
     z-index: -1;
-    width: 100%;
-    height: auto;
+    height: 100px;
     position: fixed;
+    left: -300px;
 }
 
 /*no scrollbar*/
