--- a/src/panels/preview/fragments/ModalFragment.module.css
+++ b/src/panels/preview/fragments/ModalFragment.module.css
@@ -87,7 +87,14 @@
 
 }
 
-.button button {
+.link {
+    text-decoration: none;
+    color: #F3FDFF;
+    font-style: normal;
+    font-weight: normal;
+    text-shadow: 0px 4px 6px #34ABB5;
+    display: grid;
+    justify-items: center;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 15px;
@@ -99,6 +106,9 @@
     text-align: center;
     font-family: "Titillium Web", sans-serif;
     font-size: 18px;
-    color: white;
     outline: none;
+}
+
+.link div {
+    margin-top: 7px;
 }
