--- a/src/panels/question/Question.module.css
+++ b/src/panels/question/Question.module.css
@@ -2,11 +2,12 @@
 
         height: 100%;
         background: linear-gradient(179.79deg, #699AFF 0.1%, #3171F7 21.78%);
-        font-family: Roboto, sans-serif;
+        font-family: Titillium Web, sans-serif;
         font-style: normal;
         font-weight: normal;
         text-align: center;
         color: #FFFFFF;
+        
 }
 
 .question_number {
@@ -26,20 +27,25 @@
     margin: 15px auto;
 
     display: grid;
-    grid-template-rows: 1fr 4fr 1ft;
-    grid-template-areas: "question_text" "answer_container" "control";  
+    grid-template-rows: 1fr 4fr 1fr 0.25fr;
+    grid-template-areas: "question_text" "answer_container" "control" "slider";  
 
-    width: 89%;
+    width: 90%;
     height: 80%;
 
     background: linear-gradient(179.79deg, #699AFF 0.1%, #3171F7 21.78%);
     box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.25);
     border-radius: 25px;
+
+    animation: slide_up 1.4s ease;
 }
 
 .question_text{
+    width: 80%;
+    margin: auto;
     padding-top: 42px;
     font-size: 18px;
+    text-align: center;
 }
 
 .control {
@@ -61,6 +67,7 @@
     width: 100px;
     height: 36px;
     margin: auto;
+    margin-bottom: 10px;
     padding: 18px;
 
     background: #FFFFFF;
@@ -69,7 +76,7 @@
     border-radius: 25px;
 
     
-    font-family: Roboto, sans-serif;
+    font-family: Titillium Web, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
@@ -96,13 +103,28 @@
     pointer-events: none;
 
     
-    font-family: Roboto, sans-serif;
+    font-family: Titillium Web, sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 15px;
     line-height: 18px;
 
     color: #000000;
+}
+
+.slider {
+
+    position: relative;
+    z-index: 50;
+
+    margin: auto;
+
+    width: 150px;
+    height: 5px;
+    border: none;
+    outline:none;
+    background: #E8E8E8;
+    border-radius: 25px;
 }
 
 
@@ -155,4 +177,13 @@
         margin-left: -1938px;
     }
 
+}
+
+@keyframes slide_up {
+    0%{
+        transform: translateY(250px);
+    }
+    100%{
+        transform: translateY(0);
+    }
 }
