--- a/src/panels/answer/Answer.module.css
+++ b/src/panels/answer/Answer.module.css
@@ -6,8 +6,8 @@
     grid-template-areas: "head" "question" "ans_title" "ans" "explanation_title" "explanation";
 
     width: 80%;
-    height:60%;
-    
+    height: 60%;
+
     left: 10%;
     top: 20%;
 
@@ -28,14 +28,15 @@
 }
 
 .exit {
+    background: url("../../img/answer/exit.svg") no-repeat;
     margin: auto;
-    margin-top: 20px;
-
+    margin-top: 25px;
+    height: 20px;
+    width: 20px;
     outline: none;
+    border: none;
     text-decoration: none;
 
-    font-size: 5;
-    color: #000000;
 }
 
 .exit:hover {
