--- a/src/panels/answer/Answer.module.css
+++ b/src/panels/answer/Answer.module.css
@@ -29,8 +29,7 @@
 
 .exit {
     background: url("../../img/answer/exit.svg") no-repeat;
-    margin: auto;
-    margin-top: 25px;
+    margin: 25px auto auto;
     height: 20px;
     width: 20px;
     outline: none;
