--- a/src/panels/Main/testList/task.module.css
+++ b/src/panels/Main/testList/task.module.css
@@ -19,7 +19,7 @@
 
 .pic {
     width: 100%;
-    height: 100%;
+    height: 160px;
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
 }
