--- a/src/panels/Main/Main.module.css
+++ b/src/panels/Main/Main.module.css
@@ -2,7 +2,7 @@
     scroll-snap-align: start;
     margin-left: 5px;
     margin-right: 5px;
-    height: 100vh;
+    height: available;
     overflow: hidden;
     grid-area: news;
 }
