--- a/src/panels/Main/testList/task.module.css
+++ b/src/panels/Main/testList/task.module.css
@@ -14,7 +14,7 @@
     transition: 0.3s;
     background-color: #FFFFFF;
     border-radius: 25px;
-    margin: 20px 5px;
+    margin-top: 20px;
 }
 
 .pic {
