--- a/src/panels/admin/test_creation/test_creation.module.css
+++ b/src/panels/admin/test_creation/test_creation.module.css
@@ -1,5 +1,5 @@
 .page {
-    overflow: scroll;
+
 }
     
 
@@ -28,8 +28,11 @@ a {
 }
 
 .container {
+    position: fixed;
+    overflow: scroll;
     padding: 5%;
-    
+    height: 100%;
+    width: 90%;
 }
 
 .title {
@@ -94,7 +97,7 @@ select {
 
 .select_date {
     height: 40px;
-    width: 80%;
+    width: 90%;
     margin-top: 10px;
     padding: 5px;
     font-family: Titillium Web, sans-serif;
@@ -117,17 +120,16 @@ select {
 }
 
 .month_picker {
-    width: 140px;
+    width: 120px;
 }
 
 .time_picker {
-    width: 100px;
+    width: 70px;
 }
 
 .next {
-    margin-top: 20px;
+    margin-top: 40px;
     text-align: right;
-    
 }
 
 .next a {
