--- a/src/panels/admin/test_creation/test_creation.module.css
+++ b/src/panels/admin/test_creation/test_creation.module.css
@@ -56,6 +56,7 @@ a {
     box-shadow: inset 0px 4px 11px rgba(0, 0, 0, 0.05);
     border-radius: 8px;
     outline: none;
+    padding-left: 20px;
 }
 
 .field {
