--- a/src/panels/preview/fragments/QuestionItemFragment.module.css
+++ b/src/panels/preview/fragments/QuestionItemFragment.module.css
@@ -2,6 +2,7 @@
     display: grid;
     grid-template-columns: 30px minmax(120px, 3000px) 40px;
     grid-gap: 15px;
+    height: 40px;
 }
 
 .question_status {
@@ -15,7 +16,6 @@
 }
 
 .answer {
-    margin-top: 12px;
     background-image: url("../../../img/preview/ic_question_mark.svg");
     background-repeat: no-repeat;
     background-origin: content-box;
