--- a/src/panels/preview/fragments/ModalFragment.module.css
+++ b/src/panels/preview/fragments/ModalFragment.module.css
@@ -62,11 +62,13 @@
 .progress {
     margin-left: 15px;
     margin-right: 15px;
-}
-
-.progress {
     font-size: 18px;
     margin-bottom: 10px;
+}
+
+.progress_title {
+    margin: auto;
+    width: fit-content;
 }
 
 .question_list:last-child {
