--- a/src/panels/preview/Preview.module.css
+++ b/src/panels/preview/Preview.module.css
@@ -136,3 +136,122 @@
 .link div {
     margin-top: 7px;
 }
+
+.modal_window {
+    /*position: absolute;*/
+    scroll-behavior: smooth;
+    overflow: scroll;
+    margin-top: 70px;
+    width: 100%;
+    display: grid;
+    justify-items: center;
+    grid-template-rows: 20px 1fr;
+    grid-template-areas: "slider" "content" "button";
+    background-color: white;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+}
+
+.slider_wrapper {
+    display: grid;
+    height: 20px;
+    width: 100%;
+    grid-area: slider;
+    border-radius: 15px 15px 0 0;
+    background: white;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.slider {
+    margin: 10px auto 10px;
+    height: 4px;
+    width: 150px;
+    background-color: #ECECEC;
+    border-radius: 25px;
+
+}
+
+.content_wrapper {
+    display: grid;
+    background: white;
+    grid-area: content;
+    font-family: "Titillium Web", sans-serif;
+    color: black;
+    margin-top: 10px;
+    padding-left: 25px;
+    padding-right: 25px;
+}
+
+.title {
+    font-size: 24px;
+}
+
+.status {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    color: #588EFF;
+}
+
+.description {
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.progress {
+    margin-left: 15px;
+    margin-right: 15px;
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+.progress_title {
+    margin: auto;
+    width: fit-content;
+}
+
+.question_list:last-child {
+    margin-bottom: 60px;
+}
+
+.question_item {
+    margin-bottom: 20px;
+    margin-left: -40px;
+    list-style-type:none;
+}
+
+.button {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    z-index: 30;
+    display: grid;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(163, 163, 163, 0.81) 100%);
+
+}
+
+.link {
+    text-decoration: none;
+    color: #F3FDFF;
+    font-style: normal;
+    font-weight: normal;
+    text-shadow: 0px 4px 6px #34ABB5;
+    display: grid;
+    justify-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 15px;
+    width: 220px;
+    height: 50px;
+    background: #588EFF;
+    border-radius: 15px;
+    border-style: none;
+    text-align: center;
+    font-family: "Titillium Web", sans-serif;
+    font-size: 18px;
+    outline: none;
+}
+
+.link div {
+    margin-top: 7px;
+}
