--- a/src/panels/preview/Preview.module.css
+++ b/src/panels/preview/Preview.module.css
@@ -111,28 +111,6 @@
 
 }
 
-.link {
-    text-decoration: none;
-    color: #F3FDFF;
-    font-style: normal;
-    font-weight: normal;
-    text-shadow: 0px 4px 6px #34ABB5;
-    display: grid;
-    justify-items: center;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 15px;
-    width: 220px;
-    height: 50px;
-    background: #588EFF;
-    border-radius: 15px;
-    border-style: none;
-    text-align: center;
-    font-family: "Titillium Web", sans-serif;
-    font-size: 18px;
-    outline: none;
-}
-
 .link div {
     margin-top: 7px;
 }
@@ -220,15 +198,15 @@
     list-style-type:none;
 }
 
-.button {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    z-index: 30;
-    display: grid;
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(163, 163, 163, 0.81) 100%);
+/*.button {*/
+/*    position: fixed;*/
+/*    bottom: 0;*/
+/*    width: 100%;*/
+/*    z-index: 30;*/
+/*    display: grid;*/
+/*    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(163, 163, 163, 0.81) 100%);*/
 
-}
+/*}*/
 
 .link {
     text-decoration: none;
@@ -243,13 +221,20 @@
     margin-bottom: 15px;
     width: 220px;
     height: 50px;
-    background: #588EFF;
     border-radius: 15px;
     border-style: none;
     text-align: center;
     font-family: "Titillium Web", sans-serif;
     font-size: 18px;
     outline: none;
+}
+
+.link_active {
+    background: #588EFF;
+}
+
+.link_inactive {
+    background: #BEBEBE;
 }
 
 .link div {
