--- a/src/panels/question/fragments/QuestionItemFragment.module.css
+++ b/src/panels/question/fragments/QuestionItemFragment.module.css
@@ -6,7 +6,7 @@
     position: relative;
 
     display: grid;
-    grid-template-columns: 30px 220px;
+    grid-template-columns: 1fr;
 
     background: #FFFF;
     border: 1px solid #588EFF;
