--- a/src/panels/main/Profile/LevelFragment.module.css
+++ b/src/panels/main/Profile/LevelFragment.module.css
@@ -70,7 +70,7 @@
 .cloud {
     float: left;
     height: 20px;
-    background-color: white;
+    background-color: #F2F2F2;
     border-radius: 25px;
 }
 
