--- a/src/common/components/BackButton/BackButton.module.css
+++ b/src/common/components/BackButton/BackButton.module.css
@@ -3,7 +3,7 @@
     width: 40px;
     border-radius: 40px;
     border: none;
-    background-image: url("../../../img/preview/ic_preview_back_button.svg");
+    background-image: url("../../../img/preview/ic_chevron.svg");
     background-repeat: no-repeat;
     background-origin: content-box;
     background-color: white;
