--- a/src/panels/main/Profile/LevelFragment.module.css
+++ b/src/panels/main/Profile/LevelFragment.module.css
@@ -33,7 +33,7 @@
     margin-right: 20px;
     margin-left: 20px;
     border-radius: 25px;
-    background-color: white;
+    background-color: #F2F2F2;
     color: black;
     font-size: 11px;
     text-align: center;
