--- a/public/index.css
+++ b/public/index.css
@@ -1,13 +1,13 @@
-html, body {
-    height: 100%;
-    overflow: hidden;
-}
+/*html, body {*/
+/*    height: 100%;*/
+/*    overflow: hidden;*/
+/*}*/
 
-#root {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    overflow: auto;
-}
+/*#root {*/
+/*    position: absolute;*/
+/*    top: 0;*/
+/*    bottom: 0;*/
+/*    left: 0;*/
+/*    right: 0;*/
+/*    overflow: auto;*/
+/*}*/
