--- a/src/panels/stickershop/StickerShop.module.css
+++ b/src/panels/stickershop/StickerShop.module.css
@@ -1,12 +1,12 @@
 .container {
     font-family: 'Roboto', sans-serif;
-    height: 70%;
-    width: 100%;
     display: -ms-grid;
+
     display: grid;
-    -ms-grid-rows: 55px 10vh 1fr 10vh;
-    grid-template-rows: 55px 10vh 1fr 10vh;
+    -ms-grid-rows: 55px 10vh 1fr;
+    grid-template-rows: 55px 10vh 1fr;
     justify-items: center;
+    align-items: center;
 }
 
 .headline {
@@ -40,29 +40,34 @@
     align-items: center;
 }
 
-
 .score {
     margin-left: 5px;
     font-size: 18px;
 }
 
 .sticker_container {
+    width: 100vw;
+    height: 75vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    overflow: scroll;
+    align-items: center;
     -ms-scroll-snap-type: x mandatory;
     scroll-snap-type: x mandatory;
-    overflow-x: scroll;
-    overflow-y: hidden;
-    white-space: nowrap;
-    width: 100%;
-    height: 70vh;
 }
 
 
 .sticker_container > div:last-child {
-    margin-right: 10vw;
+    margin-right: 14vw;
 }
 
 .sticker_container > div:first-child {
-    margin-left: 10vw;
+    margin-left: 14vw;
 }
 
 .sticker_container::-webkit-scrollbar {
