--- a/src/panels/main/Profile/Profile.module.css
+++ b/src/panels/main/Profile/Profile.module.css
@@ -1,4 +1,6 @@
 .profile_card {
+    height: 90%;
+    margin-top: 30px;
     margin-right: 5vw;
     display: grid;
     background-color: #FFFFFF;
@@ -34,12 +36,12 @@
 .bio {
     margin-top: 10px;
     grid-area: bio;
-
+    font-size: 14px;
 }
 
 .name {
     font-weight: bold;
-    font-size: 16px;
+    font-size: 14px;
 }
 
 .score {
