sticker shop opens

--- a/src/panels/stickershop/fragments/StickerCard.module.css
+++ b/src/panels/stickershop/fragments/StickerCard.module.css
@@ -29,6 +29,13 @@
     justify-items: center;
 }
 
+.img {
+    width: 175px;
+    height: 216px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .status {
     margin-right: 0;
     margin-left: auto;
