--- a/src/panels/stickershop/fragments/StickerCard.module.css
+++ b/src/panels/stickershop/fragments/StickerCard.module.css
@@ -1,14 +1,17 @@
-.sticker_card_wrapper {
+.wrapper {
     font-family: 'Roboto', sans-serif;
     scroll-snap-align: center;
     width: 80vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .button {
     height: 6vh;
     position: relative;
     top: -4vh;
-    left: 15vw;
+    margin: 0 auto;
     width: 45vw;
     border: none;
     border-radius: 25px;
@@ -24,7 +27,6 @@
     display: flex;
     flex-direction: column;
     padding: 15px;
-    justify-items: center;
 }
 
 .img {
