--- a/src/panels/main/testList/testList.module.css
+++ b/src/panels/main/testList/testList.module.css
@@ -1,4 +1,3 @@
-
 .news_container {
     overflow: scroll;
     height: 100%;
@@ -8,16 +7,22 @@
     align-items: center;
     padding-left: 20px;
     padding-right: 20px;
-
 }
+
+.news_container > div:first-child {
+    margin-top: 20px;
+}
+
+
 /*no scrollbar*/
 .news_container::-webkit-scrollbar {
-    display: none;  /* Safari and Chrome */
+    display: none; /* Safari and Chrome */
 }
 
-.task {
-    grid-area: task;
-}
+
+/*.task {*/
+/*    grid-area: task;*/
+/*}*/
 
 
 
