--- a/src/panels/question/Question.module.css
+++ b/src/panels/question/Question.module.css
@@ -41,7 +41,7 @@
     grid-template-areas: "question_text" "answer_container" "control" "slider";
 
     width: 90%;
-    height: 80%;
+    height: 82%;
 
     background: linear-gradient(179.79deg, #699AFF 0.1%, #3171F7 21.78%);
     box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.25);
@@ -56,6 +56,8 @@
     padding-top: 42px;
     font-size: 18px;
     text-align: center;
+    padding-top: 5px;
+	z-index: 1000;
 }
 
 .control {
@@ -152,7 +154,7 @@
 .wave {
     z-index: 1;
     width: 100%;
-    height: 366px;
+    height: 200px;
     overflow: hidden;
     position: absolute;
     bottom: 0;
@@ -161,7 +163,7 @@
 .wave_card {
     z-index: 1;
     width: 100%;
-    height: 366px;
+    height: 200px;
     overflow: hidden;
     position: absolute;
     bottom: 0;
@@ -171,9 +173,9 @@
 }
 
 .wave_one {
-    background: url('../../img/question/wave.png') repeat-x;
+    background: url('../../img/question/wave_top.png') repeat-x;
     width: 7000px;
-    height: 366px;
+    height: 200px;
     animation: waves 15s infinite linear;
     position: absolute;
     top: 0;
@@ -182,7 +184,7 @@
 .wave_two {
     background: url('../../img/question/wave_top_opacity.png') repeat-x;
     width: 7000px;
-    height: 366px;
+    height: 200px;
     animation: waves 10s infinite linear;
     position: absolute;
     top: 0;
