--- a/src/panels/main/testList/task.module.css
+++ b/src/panels/main/testList/task.module.css
@@ -3,14 +3,16 @@
     display: grid;
     grid-template-rows: 240px 100px;
     grid-template-areas: "card" "start_button";
+    font-family: "Roboto", sans-serif;
 }
 
 .card {
+    grid-area: card;
     height: 270px;
     display: grid;
-    grid-template-rows: 4fr 1fr 1fr 1fr;
-    grid-template-areas: "pic" "name" "info" "start_button";
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
+    grid-template-rows: 160px 60px 1em;
+    grid-template-areas: "pic" "name" "info";
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
     transition: 0.3s;
     background-color: #FFFFFF;
     border-radius: 25px;
@@ -24,35 +26,30 @@
     border-top-right-radius: 25px;
 }
 
-
 .name {
-    margin: 5px auto 0;
-    font-family: 'Titillium Web', sans-serif;
+    grid-area: name;
+    margin: 5px 15px 0;
     font-style: normal;
-    font-weight: bold;
     font-size: 18px;
     line-height: 27px;
     display: flex;
     align-items: center;
     text-align: center;
     letter-spacing: -0.04em;
-    text-align: center;
 }
 
 .info {
+    grid-area: info;
     display: grid;
     grid-template-columns: 3fr 0.6fr 0.2fr;
-
     text-align: center;
 }
 
 .date {
     text-align: left;
     margin-left: 15px;
-
-    font-family: Titillium Web;
+    color: #C4C4C4;
     font-style: normal;
-    font-weight: bold;
     font-size: 12px;
     line-height: 18px;
     display: flex;
@@ -88,7 +85,9 @@
     margin: auto;
     height: 40px;
     width: 200px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    display: flex;
+    align-items: center;
     background-color: #588EFF;
     border-radius: 20px;
     border: 0;
@@ -97,14 +96,12 @@
 }
 
 .link {
+    margin-left: auto;
+    margin-right: auto;
     text-decoration: none;
     color: #F3FDFF;
-    font-family: 'Titillium Web', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
     text-shadow: 0px 4px 6px #34ABB5;
-}
-.link div {
-    margin-top: 7px;
 }
