--- a/src/panels/preview/Preview.module.css
+++ b/src/panels/preview/Preview.module.css
@@ -32,12 +32,7 @@
 
 }
 
-.link div {
-    margin-top: 7px;
-}
-
 .modal_window {
-    /*_position: absolute;*/
     scroll-behavior: smooth;
     overflow: scroll;
     width: 100%;
@@ -138,6 +133,7 @@
     /*text-shadow: 0px 4px 6px #34ABB5;*/
     display: grid;
     justify-items: center;
+    align-items: center;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 15px;
@@ -150,10 +146,6 @@
     font-size: 18px;
     outline: none;
     background: #588EFF;
-}
-
-.link div {
-    margin-top: 7px;
 }
 
 .hidden {
