--- a/src/panels/main/testList/task.module.css
+++ b/src/panels/main/testList/task.module.css
@@ -88,20 +88,17 @@
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
     display: flex;
     align-items: center;
+    justify-content: center;
     background-color: #588EFF;
     border-radius: 20px;
     border: 0;
     outline: none;
     text-align: center;
-}
-
-.link {
-    margin-left: auto;
-    margin-right: auto;
     text-decoration: none;
     color: #F3FDFF;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
-    text-shadow: 0px 4px 6px #34ABB5;
+    text-shadow: 0 4px 6px #34ABB5;
 }
+
