--- a/src/panels/preview/Preview.module.css
+++ b/src/panels/preview/Preview.module.css
@@ -133,7 +133,7 @@
     align-items: center;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 2vh;
+    margin-bottom: 30px;
     width: 220px;
     height: 50px;
     border-radius: 15px;
