--- a/src/panels/preview/Preview.module.css
+++ b/src/panels/preview/Preview.module.css
@@ -145,6 +145,13 @@
     background: #588EFF;
 }
 
+@supports (-webkit-touch-callout: none) {
+    /* CSS specific to iOS devices */
+    .link {
+        margin-bottom: 15px;
+    }
+}
+
 .hidden {
     display: none;
 }
