--- a/src/panels/main/testList/task.module.css
+++ b/src/panels/main/testList/task.module.css
@@ -28,6 +28,7 @@
 
 .name {
     margin: 5px auto 0;
+    padding-left: 5px;
     font-family: 'Titillium Web', sans-serif;
     font-style: normal;
     font-weight: bold;
@@ -51,7 +52,7 @@
     text-align: left;
     margin-left: 15px;
 
-    font-family: Titillium Web;
+    font-family: 'Titillium Web', sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 12px;
@@ -87,6 +88,7 @@
 
 .start_button {
     margin: auto;
+    padding-top: 5px;
     height: 40px;
     width: 200px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
