--- a/src/panels/question/fragments/Animation.module.css
+++ b/src/panels/question/fragments/Animation.module.css
@@ -32,6 +32,14 @@ svg {
     animation: dash-check .35s .35s ease-in-out forwards;
 }
 
+.canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 @-webkit-keyframes dash {
     0% {
     stroke-dashoffset: 1000;
