--- a/src/panels/main/Profile/Profile.module.css
+++ b/src/panels/main/Profile/Profile.module.css
@@ -2,14 +2,15 @@
     height: 90%;
     margin-top: 30px;
     margin-right: 5vw;
+    padding: 5px;
     display: grid;
     background-color: #FFFFFF;
     border-radius: 25px;
     grid-template-columns: 20px 1fr;
     grid-template-rows: minmax(100px, 150px) minmax(320px, 340px) min-content;
     grid-template-areas: "slider about" "slider level_fragment" "slider logo";
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
-    font-family: "Titillium Web", sans-serif;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    font-family: "Roboto", sans-serif;
     color: black;
     grid-gap: 5px;
 }
@@ -102,6 +103,17 @@
     border-radius: 50%;
     background: radial-gradient(108.07% 112.44% at 95.1% 39.09%, rgba(213, 41, 217, 0.37) 20.75%, #D132B8 66.52%, rgba(126, 83, 133, 0.90212) 99.98%, rgba(22, 174, 64, 0.854667) 99.99%, rgba(83, 133, 103, 0.90212) 99.99%, rgba(173, 21, 140, 0.85) 100%);
     transform: rotate(-110.67deg);
+}
+
+
+@media screen and (max-device-height: 600px){
+    .profile_card {
+        grid-gap: 0;
+        margin-top: 0;
+        height: min-content;
+        grid-template-rows: 120px 320px 80px;
+    }
+
 }
 
 
