--- a/src/panels/main/testList/task.module.css
+++ b/src/panels/main/testList/task.module.css
@@ -1,36 +1,39 @@
-.field {
-    margin-top: 20px;
-    height: 310px;
-    display: grid;
-    grid-template-rows: 240px 100px;
-    grid-template-areas: "card" "start_button";
-    font-family: "Roboto", sans-serif;
-}
-
 .card {
     grid-area: card;
-    height: 270px;
+    height: min-content;
+    width: 82vw;
     display: grid;
-    grid-template-rows: 160px 60px 1em;
-    grid-template-areas: "pic" "name" "info";
+    grid-template-rows: 160px calc(80px + 1em + 15px);
+    grid-template-areas: "pic" "container";
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
     transition: 0.3s;
-    background-color: #FFFFFF;
     border-radius: 25px;
     margin-top: 20px;
 }
 
 .pic {
-    width: 100%;
+    width: inherit;
     height: 160px;
+    grid-area: pic;
+    z-index: 0;
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
+
+    object-fit: cover;
+}
+
+.container {
+    grid-area: container;
+    z-index: 1;
+    background-color: #FFFFFF;
+    border-radius: 0 0 25px 25px;
+    padding-bottom: 25px;
 }
 
 .name {
-    grid-area: name;
-    margin: 5px 15px 0;
+    height: 60px;
     font-style: normal;
+    margin: 5px 10px 5px;
     font-size: 18px;
     line-height: 27px;
     display: flex;
@@ -40,7 +43,6 @@
 }
 
 .info {
-    grid-area: info;
     display: grid;
     grid-template-columns: 3fr 0.6fr 0.2fr;
     text-align: center;
@@ -81,8 +83,8 @@
 }
 
 .start_button {
+    z-index: 100;
     margin: auto;
-    padding-top: 5px;
     height: 40px;
     width: 200px;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
@@ -100,5 +102,23 @@
     font-weight: normal;
     font-size: 14px;
     text-shadow: 0 4px 6px #34ABB5;
+
+    position: relative;
+    top: -20px;
+}
+
+@media screen and (max-device-height: 600px){
+    .card {
+        grid-template-rows: 110px min-content;
+        grid-template-areas: "pic" "container";
+    }
+
+    .pic {
+        height: 110px;
+    }
+
+    .start_button {
+        width: 170px;
+    }
 }
 
